# pyresizer

./: .gitignore  README.md  pyproject.toml  pyresizer.py  requirements.txt
.github/includes/: quality-checks.yml  security-scans.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml  quality-checks.yml  release.yml  security-scans.yml
.github/workflows/includes/: quality-checks.yml  security-scans.yml
tests/: e2etests.py  unittests.py
